# grpo-optuna

./: .env.example  .gitignore  AGENTS.md  README.md  SUMMARY.md  main.py  pyproject.toml
src/grpo_optuna/: __init__.py  cli.py  data.py  pipeline.py  rewards.py  text_utils.py
tests/: test_objective.py
